[lworld] C2 compilation fails with "Meet Not Symmetric"

XMLWordPrintable

      compiler/valhalla/inlinetypes/TestIntrinsics.java spuriously fails with:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (.../workspace/open/src/hotspot/share/opto/type.cpp:925), pid=20712, tid=20739
      # fatal error: meet not symmetric

      === Meet Not Symmetric ===
      t = compiler/valhalla/inlinetypes/MyValue1:TopPTR:exact *,iid=top (inline_depth=InlineDepthTop)
      this= java/lang/Object:AnyNull * (flatten array),iid=top (inline_depth=InlineDepthTop)
      mt=(t meet this)= compiler/valhalla/inlinetypes/MyValue1:AnyNull:exact *,iid=top (inline_depth=InlineDepthTop)
      t_dual= compiler/valhalla/inlinetypes/MyValue1:exact *
      this_dual= java/lang/Object:NotNull * (flatten array)
      mt_dual= compiler/valhalla/inlinetypes/MyValue1:NotNull:exact *
      mt_dual meet t_dual= compiler/valhalla/inlinetypes/MyValue1:exact *
      mt_dual meet this_dual= java/lang/Object:NotNull *

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: