8270896: [lworld] C2 compilation fails with "Meet Not Symmetric"